openshift/templates/frontend-dc.yaml
apiVersion: template.openshift.io/v1
kind: Template
metadata:
  creationTimestamp: null
  name: ${APPLICATION_NAME}
labels:
  template: ${APPLICATION_NAME}-template
objects:
- kind: DeploymentConfig
  apiVersion: apps.openshift.io/v1
  metadata:
    annotations:
      app.openshift.io/vcs-ref: ''
      app.openshift.io/vcs-uri: 'https://github.com/bcgov/CITZ-HybridWorkplace'
      openshift.io/generated-by: OpenShiftWebConsole
    name: ${APPLICATION_NAME}
    generation: 1
    namespace: ${LICENSE_PLATE}-${ENVIRONMENT}
    labels:
      app: ${APPLICATION_NAME}
      app.kubernetes.io/component: ${APPLICATION_NAME}
      app.kubernetes.io/instance: ${APPLICATION_NAME}
      app.kubernetes.io/name: ${APPLICATION_NAME}
      app.kubernetes.io/part-of: hwp-application-group
  spec:
    strategy:
      type: Rolling
      rollingParams:
        updatePeriodSeconds: 1
        intervalSeconds: 1
        timeoutSeconds: 600
        maxUnavailable: 25%
        maxSurge: 25%
      resources: {}
      activeDeadlineSeconds: 21600
    triggers:
      - type: ImageChange
        imageChangeParams:
          automatic: true
          containerNames:
            - ${APPLICATION_NAME}
          from:
            kind: ImageStreamTag
            namespace: ${LICENSE_PLATE}-tools
            name: '${APPLICATION_NAME}:${IMAGE_TAG}'
      - type: ConfigChange
    replicas: 1
    revisionHistoryLimit: 10
    test: false
    selector:
      app: ${APPLICATION_NAME}
      deploymentconfig: ${APPLICATION_NAME}
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: ${APPLICATION_NAME}
          deploymentconfig: ${APPLICATION_NAME}
      spec:
        containers:
          - name: ${APPLICATION_NAME}
            image: '${APPLICATION_NAME}:${IMAGE_TAG}'
            resources: {}
            terminationMessagePath: /dev/termination-log
            terminationMessagePolicy: File
            imagePullPolicy: Always
        restartPolicy: Always
        terminationGracePeriodSeconds: 30
        dnsPolicy: ClusterFirst
        securityContext: {}
        schedulerName: default-scheduler
        
parameters:
- description: Application Name
  displayName: AppName
  name: APPLICATION_NAME
  required: true
  value: hwp-frontend-application
- description: License Plate
  displayName: License Plate
  name: LICENSE_PLATE
  required: true
  value: d63404
- description: Environment
  displayName: Environment
  name: ENVIRONMENT
  required: true
  value: dev
- description: Image Tag
  displayName: ImageTag
  name: IMAGE_TAG
  required: true
  value: latest
