openshift/templates/mongo-network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: >
      {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"labels":{"template":"platform-registry"},"name":"allow-app-to-mongo","namespace":"d63404-test"},"spec":{"ingress":[{"from":[{"podSelector":{"matchLabels":{"app":"rdsi"}}}],"ports":[{"port":27017,"protocol":"TCP"}]}],"podSelector":{"name":"mongodb"}}}
  name: allow-app-to-mongo
  generation: 1
  namespace: ${LICENSE_PLATE}-${ENVIRONMENT}
  labels:
    template: platform-registry
spec:
  podSelector: {}
  ingress:
    - ports:
        - protocol: TCP
          port: 27017
      from:
        - podSelector:
            matchLabels:
              app: ${CONSUMER}
  policyTypes:
    - Ingress

parameters:
- description: Consumer
  displayName: Consumer
  name: CONSUMER
  required: true
  value: hwp-express
- description: License Plate
  displayName: License Plate
  name: LICENSE_PLATE
  required: true
  value: d63404
- description: Environment
  displayName: Environment
  name: ENVIRONMENT
  required: true
  value: dev
